--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>04 April 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>tanmay-shresth.netlify.app/</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 83066 95504</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Patiala, India</span></li>
               </ul>
