--- a/home.html
+++ b/home.html
@@ -466,7 +466,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-badge-vr-fill"></i></div>
-            <h4><a href="https://youtube.com/playlist?list=PL7DJv6PVIMUdKRCBU-_qWFsVcswjzXcWm">VR PROJECTS</a></h4>
+            <h4><a href="https://youtube.com/playlist?list=PL7DJv6PVIMUdKRCBU-_qWFsVcswjzXcWm"><u>VR PROJECTS</u></a></h4>
             <p><strong>Developed a coin game and learn the interface of Unity engine and C#.</strong></p>
           </div>
         </div>
@@ -474,7 +474,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-badge-ar-fill"></i></div>
-            <h4><a href="https://youtube.com/playlist?list=PL7DJv6PVIMUdKRCBU-_qWFsVcswjzXcWm">AR PROJECTS</a></h4>
+            <h4><a href="https://youtube.com/playlist?list=PL7DJv6PVIMUdKRCBU-_qWFsVcswjzXcWm"><u>AR PROJECTS</u></a></h4>
             <p><strong> Marker and markerless based apps with the help of untiy and Vuforia Engine Devloper.</strong> </p>
             <li><strong>Apps:</strong></li>
             <ul> 1. Marker Based Image Target</ul>
