--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>An AR-VR Developer &amp; Graphic Designer</h3>
@@ -94,14 +94,15 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>04 April 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>tanmay-shresth.netlify.app/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a>TanmayShresth</a></span></li>
+                <!-- <li><i class="bi bi-chevron-right" ></i> <strong>Website:</strong> <span><a href="https://tanmay-shresth.netlify.app/">Tanmay Shresth</a></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 83066 95504</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Patiala, India</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's + MBA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tanmaybeginningup@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
