--- a/home.html
+++ b/home.html
@@ -110,9 +110,9 @@
             </div>
           </div>
           <p>
-            I am a third-year student of the Computer Science and Engineering Department at Thapar Institute of Engineering and Technology. 
+            I am a foruth-year student of the Computer Science and Engineering Department at Thapar Institute of Engineering and Technology. 
             I like to bring the ideas in my head to reality either through designs or modeling.
-            One of them is XR field and i am amazed by the world of possibilities in XR.
+            One of them being XR field and I am amazed by the world of possibilities in XR.
           </p>
         </div>
       </div>
@@ -397,8 +397,54 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Position of Responsibility</h3>
           <div class="resume-item">
+            <h4>Summer Internship, IIT Delhi-AIA SMF</h4>
+            <h5>May 2022-Jul 2022</h5>
+            <p><em>Intern</em></p>
+            <p>
+            <ul>
+              <li><strong>Maintenance System of RWC: </strong>Under Samarth Udyog Mission of the (MHI), Govt. of India, IIT
+                Delhi, & AIA, I worked on developing a maintenance system for Robotic Welding cells</li>
+              <li><strong>Learning of Modules:</strong> Throughout the journey, I learned various technologies like IoT, PLC, ML</li>
+              <!-- <h5>Oct 2020 - Jun 2021</h5>
+              <p><em>Overall Head </em></p> -->
+              <!-- <p> -->
+              <!-- <ul> -->
+                <!-- <li>Monitoring and cooperate the working of different departments working under the society.</li>   -->
+              <!-- <li><strong>Features:</strong> </li>
+              <ul> 1. User-friendly forms for posting articles and comments. </ul>
+              <ul> 2. Upvote the article</ul>
+              <li><strong>Tech Stack:</strong> </li>
+              <ul>React.js, Html, CSS, JavaScript, Node.js, Express.js, MongoDB</ul> -->
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Summer Internship, Culenz</h4>
+            <h5>June 2022-Jul 2022</h5>
+            <p><em>Intern</em></p>
+            <p>
+            <ul>
+              <li><strong>Unity & Unreal Applications: </strong>Worked on integration of XR on Unity and Unreal Engine</li>
+              <li><strong>Creation of 3D Models:</strong> Building the imagination into existence according to the project's
+                requirements by creating 3D models</li>
+              <!-- <h5>Oct 2020 - Jun 2021</h5>
+              <p><em>Overall Head </em></p> -->
+              <!-- <p> -->
+              <!-- <ul> -->
+                <!-- <li>Monitoring and cooperate the working of different departments working under the society.</li>   -->
+              <!-- <li><strong>Features:</strong> </li>
+              <ul> 1. User-friendly forms for posting articles and comments. </ul>
+              <ul> 2. Upvote the article</ul>
+              <li><strong>Tech Stack:</strong> </li>
+              <ul>React.js, Html, CSS, JavaScript, Node.js, Express.js, MongoDB</ul> -->
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
             <h4>Echoes Club, TIET</h4>
-            <h5>Jun 2020 - Present</h5>
+            <h5>Jun 2020 - July 2022</h5>
             <p><em>Creative Director </em></p>
             <p>
             <ul>
@@ -463,7 +509,21 @@
         <p>My Projects</p>
       </div>
 
+
       <div class="row">
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="icon-box">
+            <div class="icon"><i class="bi bi-box-seam"></i></div>
+            <h4><a href="https://youtube.com/playlist?list=PL7DJv6PVIMUdePq4FMyJfWkr1UqeuRSmC"><u>FACTORS</u></a></h4>
+            <p><strong>FACTORS- Fine Apparel Category Classification & Try on Recommender System</strong></p>
+            <br>
+            <p><li>Implemented U2 Net machine learning model for virtual try-on of clothes</p></li>
+            <br>
+            <p><li>Developed the web app dashboard where user can upload their pics and try on different clothes available on the website in the comfort of their home</p></li>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-badge-vr-fill"></i></div>
@@ -486,7 +546,9 @@
             <ul> 6. Markerless apps using Cloud</ul>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-currency-dollar"></i></div>
