--- a/home.html
+++ b/home.html
@@ -110,9 +110,9 @@
             </div>
           </div>
           <p>
-            I am a foruth-year student of the Computer Science and Engineering Department at Thapar Institute of Engineering and Technology. 
-            I like to bring the ideas in my head to reality either through designs or modeling.
-            One of them being XR field and I am amazed by the world of possibilities in XR.
+            I am a fourth-year student of the Computer Science and Engineering Department at Thapar Institute of Engineering and Technology. 
+            <br>I like to bring the ideas in my head to reality either through designs or modeling.
+            <br>One of them being XR field and I am amazed by the world of possibilities in XR.
           </p>
         </div>
       </div>
